the spacing was fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -128,7 +128,6 @@
   font-weight: 600;
   line-height: 27px;
   text-transform: uppercase;
-  margin-bottom: 16px;
 }
 
 .menu__book-a-test-ride {
@@ -136,6 +135,7 @@
   width: fit-content;
 
   padding-bottom: 7px;
+  margin-top: 16px;
   border-bottom: 1px solid #1D1D1D;
 
   color: inherit;
